# LLVM

./: Conway-Game-Of-Life
ASM_2_IR/: game.s  generated.ll  generator.cpp
Conway-Game-Of-Life/: CMakeLists.txt  Readme.md  life.cpp  life.ll  sim.cpp  sim.h
IR_GEN/: generatedir.ll  main.cpp
MyLanguage/: mylang.cpp  mylang.g4  mylang.txt
Pass/: Pass_route.cpp  Readme.md  count.cpp  log.cpp  statistics.txt
